[project]
name = "montewalk"
version = "0.1.0"
description = "MCP server bringing institutional-grade quantitative finance to conversational AI Agents "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "yfinance",
    "pandas",
    "numpy",
    "scipy",
    "pandas_ta",
    "gnews",
    "newsapi-python",
    "pycoingecko",
    "alpaca-py",
    "python-dotenv",
    "modal>=0.63.0",
    "requests",
    "pydantic>=2.12.3",
    "gradio>=6.0.1",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "mplfinance>=0.12.10b0",
    "pillow>=12.0.0",
    "pytest-dependency>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
